# hardshell

./: .gitignore  Dockerfile  LICENSE  README.md  hardshell.toml.example  pyproject.toml
.github/workflows/: ci.yml
src/hardshell/: __init__.py  __main__.py  cli.py  config.py  models.py
src/hardshell/analysis/: llm.py  scorer.py
src/hardshell/intel/: epss.py  kev.py
src/hardshell/reporters/: json_report.py  markdown.py  terminal.py
src/hardshell/scanners/: __init__.py  base.py  grype.py  lynis.py  nuclei.py  system.py  trivy.py
tests/: test_models.py  test_scanners.py  test_scorer.py
