[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hardshell"
version = "0.1.0"
description = "VPS security hardening tool — scan, enrich with CTI, prioritize, remediate."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "shugo", email = "shugo.nozaki@gmail.com" }]
keywords = ["security", "hardening", "vps", "vulnerability", "scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "typer>=0.15",
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
hardshell = "hardshell.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hardshell"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
